Урок 1. Поменял пару цветов в палитре. Подключил viewBinding

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 32
 
+    buildFeatures{
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "rom.example.pictureoftheday"
         minSdk 28
