--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,17 @@
         android:supportsRtl="true"
         android:theme="@style/BaseTheme"
         tools:targetApi="31">
-        <activity
-            android:name=".view.MainActivity"
+        <activity android:name=".navigation.ApiActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="true">
         </activity>
         <meta-data
             android:name="preloaded_fonts"
