--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         tools:targetApi="31">
 
 
-
         <activity
             android:name=".navigation.bottom.ApiBottomActivity"
             android:exported="true">
@@ -31,8 +30,6 @@
         </activity>
 
 
-
-
         <activity
             android:name=".navigation.ApiActivity"
             android:exported="true">
@@ -40,14 +37,9 @@
         </activity>
 
 
-
         <activity
             android:name=".view.MainActivity"
-            android:exported="true">
-        </activity>
-
-
-
+            android:exported="true"></activity>
 
 
         <meta-data
