--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,7 @@
 
 
         <activity
-            android:name=".navigation.bottom.ApiBottomActivity"
-            android:exported="true">
-        </activity>
-
-
-        <activity
-            android:name=".navigation.ApiActivity"
+            android:name=".layout.LayoutActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,9 +29,25 @@
 
 
         <activity
+            android:name=".navigation.bottom.ApiBottomActivity"
+            android:exported="true">
+        </activity>
+
+
+
+        <activity
+            android:name=".navigation.ApiActivity"
+            android:exported="true">
+        </activity>
+
+
+        <activity
             android:name=".view.MainActivity"
             android:exported="true">
         </activity>
+
+
+
 
 
         <meta-data
